<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Polygon</string>
	<string name="hello_world">Hello world!</string>
	<string name="menu_change_user">Change User</string>
	<string name="menu_logout">Logout</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="login_button">Login</string>
	<string name="date">Date</string>
	<string name="time_oracle_selected_time">Time</string>
	<string name="time_oracle_selected_oracle">Oracle</string>
	<string name="diff">Difference</string>
	<string name="refresh">Refresh</string>
	<string name="search">Search</string>
	<string name="open_drawable">Open menu</string>
	<string name="close_drawable">Close menu</string>

</resources>
