<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
	<TextView
			android:id="@+id/date"
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:layout_weight="1"
			android:text="@string/date"
			android:textSize="18sp"
			android:gravity="center"/>
	<TextView
			android:id="@+id/time_or_oracle"
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:layout_weight="1"
			android:text="@string/time_oracle_selected_time"
			android:textSize="18sp"
			android:gravity="center"/>
	<TextView
			android:id="@+id/difference"
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:layout_weight="1"
			android:text="@string/diff"
			android:textSize="18sp"
			android:gravity="center"/>
</LinearLayout>